Changes made by Mesmera Fernandes (mesmeracomunicacao@gmail.com).

--- a/Contrato Eletronico Mesmera/views/eventogram.html
+++ b/Contrato Eletronico Mesmera/views/eventogram.html
@@ -271,6 +271,8 @@
         
     </div>
      
+   
+     
      
     <div data-role="footer">
         <div data-role="navbar">
@@ -279,10 +281,52 @@
         </div>
     </div>
 </div>
+        
+        
+        
+        
+        
+        
+        
+ <div data-role="modalview" id="modalview-savenomedoarquivo" style="width: 90%;" data-use-native-scrolling="true">
+    <div data-role="header">
+        <div data-role="navbar">
+            <span>SALVAR ARQUIVO:</span>
+            <a data-click="closeModalViewLogin" data-role="button" data-align="right">Cancelar</a>
+        </div>
+    </div>
+
+
+      <div class='input-wrapper' style="height:220px; width:100%;">
+          <label>NOME:
+                    <input type="text" value="" />
+          </label>  
+     </div>
+     
+  
+     
+    <div data-role="footer">
+        <div data-role="navbar">
+            <a data-click="openModalViewLogin" id="modalview-login-button" type="button" data-role="button" data-align="right">LIMPAR</a>
+            <a data-click="okModalViewLogin" id="modalview-login-button" type="button" data-role="button" data-align="right">OK</a>
+        </div>
+    </div>
+</div>
+        
+        
+        
+        
+        
+        
          
     <div id="recebe_assinatura"></div>
-        
+        <a data-click="openModalViewLogin" data-role="button" data-rel="modalview" href="#modalview-savenomedoarquivo">TESTE</a>
         <a data-click="makepdf"  type="button" data-role="button" >FAZER PDF</a>
+        <a data-click="takePicture"  type="button" data-role="button" >ANEXAR RG E CPF</a>
+        
+          <h2>ANEXO:</h2>
+     <img id="fotorg" src="" style="width:100%; height:auto;">
+        
     </form>
    
     <script>  
