--- a/Contrato Eletronico Mesmera/views/home.html
+++ b/Contrato Eletronico Mesmera/views/home.html
@@ -10,8 +10,8 @@
     
     <h1></h1>
   
-    <ul  data-role="scroller" class="pdflist" data-pull="foo" >
-    </ul>
+    <div  data-role="listview"  data-init="initListView"  class="pdflist"  data-item-change="foo" data-pull="foo" data-source="foo"  data-pull-to-refresh="true" data-append-on-refresh="true">
+    </div> 
    
 
     
@@ -21,16 +21,14 @@ function foo() {
     console.log("foo!");
             $('.pdflist li').remove();
             refreshlist();
+            alert("teste");
             
-        
- 
-
-
-
 }
+function initListView(e) {
 
-  
+            alert("teste")
             
+ };           
             
             
  window.requestFileSystem(LocalFileSystem.PERSISTENT, 0, onFileSystemSuccess, fail);
