Changes made by Mesmera Fernandes (mesmeracomunicacao@gmail.com).

--- a/Contrato Eletronico Mesmera/views/eventogram.html
+++ b/Contrato Eletronico Mesmera/views/eventogram.html
@@ -8,7 +8,7 @@
         <img class="titulocontratoeventogram" src="styles/images/eventogram_icon.png">
         <img class="titulocontratophotogramma" src="styles/images/photogramma_icon.png">
         <img class="titulocontratoinky" src="styles/images/inky.png">
-	    <button class="dl-trigger"></button> <span id="bypassme" class="titulo_contrato">Contrato Mesmera Comunicação</span> 
+	    <button class="dl-trigger  dl-trigger_antes"></button> <span id="bypassme" class="titulo_contrato">Contrato Mesmera Comunicação</span> 
 	    <ul id="dlmenuopen" class="dl-menu">
 		   <li><span onclick="contrato_eventogram()"><img src="styles/images/eventogram_icon.png"><div>EVENTOGRAM</div></span></li>
            <li><span onclick="contrato_photogramma()"><img src="styles/images/photogramma_icon.png"><div>PHOTOGRAMMA</div></span></li>
